Fix color temperature range to Kelvin
